# DOOM-on-Pulse-Oximeter

./: CMakeLists.txt  PulseOxymeterRE.drawio  README.md  _config.yml  working_pulse_spi_data.txt
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_AnalogWindowWatchdog/Project/IAR/: ADC_AnalogWindowWatchdog.ewp
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_ContinuousConversion/Project/IAR/: ADC_ContinuousConversion.ewp
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_MultiChannel/Project/IAR/: ADC_MultiChannel.ewp  ADC_MultiChannel.eww
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_MultiChannel/Project/MDK/: ADC_MultiChannel.uvprojx
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_MultiChannelScan/Project/IAR/: ADC_MultiChannelScan.ewp
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_TMRTrigger/Project/IAR/: ADC_TMRTrigger.ewp
APM32F0xx_SDK_V1.8.6/Examples/ADC/ADC_VBAT/Project/IAR/: ADC_VBAT.ewp  ADC_VBAT.eww
APM32F0xx_SDK_V1.8.6/Examples/CAN/CAN_DualFIFOInterrupt/Project/IAR/: CAN_DualFIFOInterrupt.eww
APM32F0xx_SDK_V1.8.6/Examples/CAN/CAN_LoopBack/Project/IAR/: CAN_LoopBack.ewp
APM32F0xx_SDK_V1.8.6/Examples/CAN/CAN_LoopBack/Project/MDK/: CAN_LoopBack.uvprojx
APM32F0xx_SDK_V1.8.6/Examples/COMP/COMP_PWMSignalControl/Project/IAR/: COMP_PWMSignalControl.ewp
APM32F0xx_SDK_V1.8.6/Examples/DAC/DAC_ADC/Project/IAR/: DAC_ADC.ewp
APM32F0xx_SDK_V1.8.6/Package/: Geehy.APM32F0xx_DFP.1.1.3.pack
linker/: APM32F030C8.ld
src/: doom_demo.c  doom_demo.h  doom_frames.c  doom_frames.h  hw.h  main.c  oled.h  oled_ssd1306_bitbang.c  startup_apm32f030.s  system_apm32f030.c
tools/: find_spi_signature.py  video_to_frames.py
(+109 files in other folders)
